tests/typing/bad/testfile-for-1.jl
for i = (1 + true) : 4 end
